--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ AUTH_SECRET=wkKPblDKwQy7hQi6C+WWTaGIMa2WFJBAGRAVK9Dqc+c=
 GOOGLE_CLIENT_ID=1084372275448-b4seiql8fil46l8sii2mq7pfjvgbjh5d.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGO_URI = mongodb+srv://6packauthv5:ankit22@cluster0.xvjabft.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXTAUTH_URL=https://authv5youtubedeploy.vercel.app # Update this for production
 # AUTH_SALT=a1c051ce4d9ba77ac3d6a408bcda2de4
-NEXTAUTH_URL=http://localhost:3000 # Update this for production
 # NODE_ENV=production
